fix dockerFile
Signed-off-by: kaledOu <kaled.ouali@gmail.com>